# lib264

./: .gitmodules  CMakeLists.txt  README.md
browser_plugin/: Makefile_lib  Makefile_wasm  buffer-handler.c  decode-avc-priv.h  decode-avc.c
cmake/: utils.cmake
common/: common.cmake  ih264_buf_mgr.c  ih264_buf_mgr.h  ih264_cabac_tables.c  ih264_cabac_tables.h  ih264_cavlc_tables.c  ih264_cavlc_tables.h  ih264_chroma_intra_pred_filters.c  ih264_common_tables.c  ih264_common_tables.h  ih264_deblk_edge_filters.c  ih264_deblk_edge_filters.h  ih264_deblk_tables.c  ih264_deblk_tables.h  ih264_debug.h  ih264_defs.h  ih264_disp_mgr.c  ih264_disp_mgr.h  ih264_dpb_mgr.c  ih264_dpb_mgr.h  ih264_error.h  ih264_ihadamard_scaling.c  ih264_inter_pred_filters.c  ih264_inter_pred_filters.h  ih264_intra_pred_filters.h  ih264_iquant_itrans_recon.c  ih264_itrans_recon.h  ih264_list.c  ih264_list.h  ih264_luma_intra_pred_filters.c  ih264_macros.h  ih264_mem_fns.c  ih264_mem_fns.h  ih264_padding.c  ih264_padding.h  ih264_resi_trans.h  ih264_resi_trans_quant.c  ih264_size_defs.h  ih264_structs.h  ih264_trans_data.c  (+6 more)
decoder/: dec264.cmake  ih264d_api.c  ih264d_bitstrm.c  ih264d_bitstrm.h  ih264d_cabac.c  ih264d_cabac.h  ih264d_cabac_init_tables.c  ih264d_compute_bs.c  ih264d_deblocking.c  ih264d_deblocking.h  ih264d_debug.c  ih264d_debug.h  ih264d_defs.h  ih264d_dpb_manager.h  ih264d_dpb_mgr.c  ih264d_error_handler.h  ih264d_format_conv.c  ih264d_format_conv.h  ih264d_function_selector.h  ih264d_function_selector_generic.c  ih264d_inter_pred.c  ih264d_inter_pred.h  ih264d_mb_utils.c  (+42 more)
(+91 files in other folders)
